[package]
name = "audio-drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
display-interface = "0.4"
display-interface-i2c = "0.4"
display-interface-spi = "0.4"
generic-array = "0.14.2"
embedded-graphics = "0.6.0"
ssd1306 = "0.4.0"
micromath = "1.1.0"
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"


[dependencies.microfft]
default-features = false
features = ["maxn-1024"]
version = "0.3.0"


[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]
